--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -9,7 +9,7 @@
                      </div>
                 </div> 
                 <div class="text">
-                    <p class='bg-secondary'>Join a random group chat </p>
+                    <p class=''>Join a random group chat </p>
                 </div>
             </div>
             <div class='part'>
