--- a/src/app/secondheader/secondheader.component.html
+++ b/src/app/secondheader/secondheader.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="row">
        
-        <div class="col-8 col-sm-12 col-md-12 second-header bg-dark">
+        <div class="col-8 col-sm-12 col-md-12 second-header bg-dark" #header>
             <ul class='nav py-2'>
                 <div>
                 <li class='nav-item' routerLink='/home'>home</li>
