--- a/src/app/createroom/createroom.component.css
+++ b/src/app/createroom/createroom.component.css
@@ -4,7 +4,8 @@
 }
 
 .row{
-    background:rgba(255,255,255,0.96);
+    /*background:rgba(255,255,255,0.96);
+    background: #ebebeb;*/
     /*background: url("../../assets/5267.jpg");
     background-size:cover;
     background-position: center;
