--- a/src/app/messagearea/messagearea.component.css
+++ b/src/app/messagearea/messagearea.component.css
@@ -241,7 +241,6 @@ ul {
 
 
 
-
 .message-box-holder {
   width: 100%;
   padding: 10px 6px;
@@ -456,9 +455,14 @@ ul {
 .chat-partner-name {
     padding-left:50px;
 }
+@media screen and (max-width:1024px){
+  .chatbox-holder{
+    width:90%;
+  } 
+}
 
 @media screen and (max-width:600px){
- 
+  
     
    .outerlayer{
      height:100vh;
@@ -517,4 +521,138 @@ ul {
       justify-content: space-between;
       margin:5px auto;
     }
+    
+    .settings{
+      overflow-x:auto;
+    }
+    .nav{
+      width:unset !important;
+      min-width:150% !important;
+      flex-wrap: nowrap;
+    }
+    .nav li{
+      font-size:20px;
+    }
+   
+}
+
+
+
+
+
+*{
+  box-sizing: border-box;
+  letter-spacing: 1px;
+}
+
+.row{
+  /*background:rgba(255,255,255,0.96);
+  background: #ebebeb;*/
+  /*background: url("../../assets/5267.jpg");
+  background-size:cover;
+  background-position: center;
+  background-attachment: fixed;*/
+}
+input.ng-valid, textarea.ng-valid{
+  border-left:2px solid green;
+}
+input.ng-invalid, textarea.ng-invalid{
+  border-left:2px solid red;
+}
+
+.error{
+  font-size:16px;
+  margin-left:5px;
+  color:red;
+}
+
+input:focus{
+  outline: none;
+}
+.create-room{
+  margin:0px auto;
+  width:80%;;  
+}
+.form-control{
+  background:whitesmoke;
+  padding-left:5px;
+}
+h3{
+  letter-spacing:2px;
+}
+
+input[type='file']{
+  visibility:hidden;
+}
+.profile-pic{
+  width:150px;
+  height:150px;
+  border-radius: 50%;
+  overflow:hidden;
+  position: relative;
+  left:50%;
+  transform: translateX(-50%);
+
+}
+
+.profile-pic img{
+  width:100%;
+  height:100%;
+  border-radius: 50%;
+}
+.blur-bg{
+  width:100%;
+  height:100%;
+  position:absolute;
+  top:0%;
+  left:0%;
+  background:rgba(0,0,0,0.3);
+}
+#profilepicuploader{
+  position:absolute;
+  width:50px;
+  height:50px;
+  background:whitesmoke;
+  color:black;
+  border-radius:50%;
+  top:50%;
+  left:50%;
+  transform:translate(-50%, -50%);
+  text-align: center;
+  font-size:25px;
+  opacity:1;
+
+  
+}
+
+.room-name{
+  float:left;
+}
+.room-cat{
+  float:right;
+}
+.room-name, .room-cat{
+  width:49%;
+  display:inline-block;
+
+}
+
+@media screen and (max-width:700px){
+  .container{
+       display:inline-block;
+       width:100%;
+       height:unset;
+       min-height: 100%;
+       padding:0px;
+  }
+  .form-group{
+      width:90%;
+      margin-left:auto;
+      margin-right:auto;
+  }
+
+  .room-name, .room-cat{
+      float:none;
+      display:block;
+  }
 }
