--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -6,7 +6,7 @@
 
 }
 .container{
-    background:rgba(255,255,255,0.94);
+    
 }
 h2 {
     letter-spacing: 2px;
@@ -56,7 +56,7 @@ input[type='file']{
     padding:5px;
     padding-left:10px;
     font-size:18px;
-    background:whitesmoke
+    background:white;
 }
 .form-control{
     letter-spacing: 1px;
