--- a/src/app/view-profile/view-profile.component.html
+++ b/src/app/view-profile/view-profile.component.html
@@ -11,7 +11,7 @@
                <!-- details -->
                 
                 <div class="details">
-                    <div class="name">{{ person_name }}</div>
+                    <div class="name">{{ person_name }} </div> <li (click)="send_request()" class='add-friend-button'><i>add friend</i></li>
                     <div class="about">{{ person_about }}</div>
                     <div class="gender">{{ person_gender }}</div>
                 </div>
