--- a/src/app/messagearea/messagearea.component.html
+++ b/src/app/messagearea/messagearea.component.html
@@ -161,7 +161,7 @@ collapsable end  -->
          
            
                <div *ngIf="message.from_id != getPublicId()"  class="message-sender">
-                  <span (click)='viewProfile(message.from_id)'>{{message.details.name}}</span>
+                  <span (click)='viewProfile(message.from_id)' style='cursor:pointer'>{{message.details.name}}</span>
                </div>
                <div *ngIf="message.from_id != getPublicId()" class="message-box message-partner ld ld-throw-btt-in" style='animation-duration: 0.5s;'>
 
