--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -24,7 +24,7 @@
                 <div class="join-group make-room pt-2 bg-dark" (click)="goToCreateRoom()">
                    
                    <div class='img'>
-                    <img src="assets\icons\add-user.png" alt="">
+                    <img src="assets\icons\stories.png" alt="">
                     <div class='headers'>
                         <h3>Create Room</h3>
                         <div class="arrow">
