--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,10 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-12 top-header bg-light py-1 text-dark">
-            <div class="logo"><h3><small>ChatApp</small></h3></div>
+            <div class="logo">
+                <h3 style='display:inline-block; '><small>ChatApp</small></h3>
+                <img src="assets\icons\Discuss-1s-200px (2).png" style='width:40px;height:40px;display:inline-block; margin-right:7px;transform:rotate(-60deg)' alt="">
+            </div>
             <div class="text">
                 <span class='badge badge-pill mt-1 badge-pill-small bg-success'>&nbsp;</span><i>meet stranges online</i>
             </div>
