--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -42,6 +42,14 @@ h3{
     transition:0.4s;
 }
 
+.logo{
+    display:flex;
+    align-items: center;
+}
+.logo h3 small{
+    font-weight: 500;
+}
+
 @media screen and (max-width:600px){
     
     .top-header{
