--- a/src/app/private-chat/private-chat.component.css
+++ b/src/app/private-chat/private-chat.component.css
@@ -455,6 +455,12 @@ ul {
 .chat-partner-name {
     padding-left:50px;
 }
+
+img{
+  margin-left:10px;
+  width:40px;
+  height:40px;
+}
 @media screen and (max-width:1024px){
   .chatbox-holder{
     width:90%;
