--- a/src/app/friend-circle/friend-circle.component.css
+++ b/src/app/friend-circle/friend-circle.component.css
@@ -81,6 +81,22 @@
     border-color: green;
 }
 
+
+.message-indicator{
+    position:absolute;
+    left:80%;
+    bottom:2px;
+    width:25px;
+    height:25px;
+    border-radius:50%;
+    background:green;
+    color:white;
+    font-size:14px;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
+
 @keyframes rotate-backward{
     0%{
         transform:translate(-50%, -50%) rotate(0deg);
