private message fixed

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,6 +1,7 @@
 <div class="container-lg">
     <div class="row">
-        <div class="col-12 p-5 category-container">
+        <div class="col-12 p-5 pt-md-2 category-container">
+            <h2 class='text-center mb-1 mb-md-2'><small>Chat options</small></h2>
           <div class='part'>
             <div class="join-group pt-2 bg-dark" (click)="goToMessageArea()">
               
