--- a/src/app/chat/chat.component.css
+++ b/src/app/chat/chat.component.css
@@ -13,6 +13,10 @@
 .row{
   
 }
+
+h2{
+    font-weight: 500;
+}
 .category-container{
     position:absolute;
     top:50%;
@@ -187,6 +191,7 @@ h3 {
         padding:20px 0px;
         padding-top:40px;
         margin:0px;
+        margin-bottom:30px;
     }
     h3{
         font-size:20px;
