--- a/src/app/friend-circle/friend-circle.component.css
+++ b/src/app/friend-circle/friend-circle.component.css
@@ -188,6 +188,18 @@
 }
 
 .circle-container .center-details .self-pic{
+    width:40%;
+    height:40%;
+    overflow: hidden;
+    border-radius: 50%;
+}
+.circle-container .center-details .self-pic img{
+    width:100%;
+    height:100%;
+    border-radius:50%;
+}
+
+.hide{
     display:none;
 }
 
